# todo_api_rust

./: .env  .gitignore  Cargo.toml  Rocket.toml
migrations/2021-07-04-155322_create_projects/: up.sql
migrations/2021-07-04-212654_create_tasks/: up.sql
src/: db_connection.rs  lib.rs  main.rs  models.rs  operations.rs  routes.rs  schema.rs
