[package]
name = "todo_api_rust"
version = "0.1.0"
authors = ["bl0rch1d <temaflash96@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.10"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"]}
diesel = { version = "1.4", features = ["postgres"] }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "diesel_postgres_pool"]
